# 2026_new_year

./: CHANGELOG.md  README.md  pyproject.toml  tls_echo_client.py
.github/workflows/: ci-release.yml
docs/: ci.rst  conf.py  examples.rst  index.rst  packaging.rst  usage.rst
src/new_year_2026/examples/extension_pkg/: README.md  pyproject.toml  setup.cfg  setup.py
src/new_year_2026/examples/extension_pkg/src/hello_ext/: __init__.py  hello_c.c  hello_cpp.cpp
