[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2026-new-year"
version = "0.1.0"
description = "TCP/TLS/HTTP/SSH learning scripts and demos."
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
new_year_2026 = ["*.pem"]
