[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-ext-demo"
version = "0.1.0"
description = "Minimal pybind11 extension demo package"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.setuptools.ext-modules]]
name = "hello_ext._core"
sources = [
  "src/hello_ext/bindings.cpp",
  "src/hello_ext/hello_c.c",
  "src/hello_ext/hello_cpp.cpp",
]
language = "c++"
