[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.10", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[project]
name = "hello-ext-demo"
dynamic = ["version"]
description = "Minimal pybind11 extension demo package"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hello_ext = ["*.h"]
